--- a/themes/karakata/sass/_mixins.scss
+++ b/themes/karakata/sass/_mixins.scss
@@ -108,6 +108,7 @@
 
         @include desktop {
           border-radius: 9.4vw;
+          padding-right: 2.5vw;
         }
       }
 
